[package]
name = "consumr"
version = "0.1.1"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2018"
description = "Everything will be consumed."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dcchut/consumr"

[dependencies]
rand = "0.7"
ggez = "0.5"
legion = "0.2"